syntax = "proto3";

package public;

import "types.proto";

message Fight {
    bytes id = 1;
    uint32 current_lap = 2;
    GridType grid_type = 3;
    bool first_turn_made = 4;
    bool fight_finished = 5;
    Team previous_turn_team = 6;
    int32 highest_speed_this_turn = 7;
    repeated string already_made_turn = 8;
    map<uint32, StringList> already_made_turn_by_team = 9;
    repeated string already_hour_glass = 10;
    repeated string already_replied_attack = 11;
    map<uint32, uint32> team_units_alive = 12;
    repeated string hour_glass_queue = 13;
    repeated string morale_plus_queue = 14;
    repeated string morale_minus_queue = 15;
    int64 current_turn_start = 16;
    int64 current_turn_end = 17;
    map<uint32, uint32> current_lap_total_time_per_team = 18;
    repeated string up_next = 19;
    double steps_morale_multiplier = 20;
    map<uint32, bool> has_additional_time_requested_per_team = 21;
}
